# qlc

./: .gitattributes  .gitignore  BUILD.md  LICENSE  MANIFEST.in  README.md  build_wheels.py  pyproject.toml  setup.py  test_basic.py  test_imports.py
.github/workflows/: build-wheels.yml  build.yml  publish-to-pypi.yml  release.yml
qlc/: __init__.py  install.py
qlc/cli/: __init__.py  installer.py  qlc_main.py  qlc_py_main.py
qlc/config/: qlc.conf  qlc_cams.conf  qlc_test.conf  qlc_tex.conf
qlc/config/json/: qlc_config.json  qlc_config_example_1a_all-obs.json  qlc_config_example_1b_all-mod.json  qlc_config_example_1c_all-coll.json  qlc_config_example_2a_all-obs.json  qlc_config_example_2b_all-mod.json  qlc_config_example_2c_all-coll.json  qlc_config_example_3a-us_obs.json  qlc_config_example_3b-us_mod.json  qlc_config_example_3c-us_coll.json  qlc_config_example_4a_eu-obs.json  qlc_config_example_4b_eu-mod.json  qlc_config_example_4c_eu-coll.json
qlc/config/nml/: mars_A1_sfc.nml  mars_A2_sfc.nml  mars_A3_sfc.nml  mars_B1_pl.nml  mars_B1_sfc.nml  mars_B2_pl.nml  mars_C1_pl.nml  mars_C1_sfc.nml  mars_C2_pl.nml  mars_C3_ml.nml  mars_D.nml  mars_E.nml  mars_F.nml  mars_G.nml
qlc/doc/: CONTRIBUTING.md  USAGE.md
qlc/examples/cams_case_1/config/: qlc_cams.conf
qlc/examples/cams_case_1/config/json/: qlc_config.json
qlc/examples/cams_case_1/obs/: ebas_station-locations.csv
qlc/plugin/: qlc_multiprocessing_plugin.py  qlc_obs_enrichment_plugin.py
qlc/py/: version.py.in
qlc/sh/: qlc_A1.sh  qlc_B1a.sh  qlc_B2.sh  qlc_C5.sh  qlc_D1.sh  qlc_Z1.sh  qlc_batch.sh  qlc_common_functions.sh  qlc_main.sh  qlc_start.sh  qlc_start_batch.sh
qlc/sh/tex_template/: beamercolorthemeCAMS2_35.sty  beamerfontthemeCAMS2_35.sty  beamerthemeCAMS2_35.sty  template.tex
(+36 files in other folders)
