[build-system]
requires = ["setuptools>=61.0", "wheel", "cython", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "qlc"
version = "0.3.17"
license = { text = "MIT" }
description = "Quick Look Content (QLC): Model–Observation Comparison Suite for Use with CAMS"
authors = [
  { name = "ResearchConcepts io GmbH", email = "contact@researchconcepts.io" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "xarray",
  "netCDF4",
  "scipy",
  "cartopy",
  "tqdm"
]

[project.optional-dependencies]
build = ["tomli"]
test = ["pytest"]
cams = []

[project.scripts]
qlc = "qlc.cli:run_shell_driver"
qlc-py = "qlc.cli.qlc_py_main:main"
qlc-python = "qlc.cli:run_python_driver"
sqlc = "qlc.cli:run_batch_driver"
qlc-install = "qlc.cli.installer:main"

[tool.setuptools]
include-package-data = true
